# candidate-shortlister

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  all_detected_honeypots.json  auth.db  auth_db.py  candidate_id_map_sample.json  embed_candidates.py  embed_candidates_multi.py  embeddings_sample.npy  honeypot_ids.txt  honeypots.json  impossible_company_durations.json  pyproject.toml  rank.py  requirements.txt  run_debug.py  server.py  submission_metadata.yaml  team_submission_sample.csv  undergrad_anomalies.json
docs/images/: place_screenshots_here.txt
frontend/src/: App.jsx  index.css
roles/default/: job_description_parsed.json  team_submission_details.json
